Update webview version

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/sergejafanasov/Library/Android/sdk
-flutter.sdk=/Users/sergejafanasov/flutter
+sdk.dir=/Users/startsev/Library/Android/sdk
+flutter.sdk=/Users/startsev/fvm/versions/3.24.0
